// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialization should correctly initialize validator per default 1`] = `
GBFS {
  "auth": Object {},
  "gotOptions": Object {},
  "options": Object {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization should correctly initialize validator with options 1`] = `
GBFS {
  "auth": Object {},
  "gotOptions": Object {},
  "options": Object {
    "docked": true,
    "freefloating": true,
    "version": "v2.1",
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization should throw an error without url 1`] = `"Missing URL"`;

exports[`initialization with auth should correctly initialize with \`basic_auth\` 1`] = `
GBFS {
  "auth": Object {
    "basicAuth": Object {
      "password": "mypassword",
      "user": "myuser",
    },
    "type": "basic_auth",
  },
  "gotOptions": Object {
    "headers": Object {
      "Authorization": "basic bXl1c2VyOm15cGFzc3dvcmQ=",
    },
  },
  "options": Object {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization with auth should correctly initialize with \`bearer_token\` 1`] = `
GBFS {
  "auth": Object {
    "bearerToken": Object {
      "token": "mytoken",
    },
    "type": "bearer_token",
  },
  "gotOptions": Object {
    "headers": Object {
      "Authorization": "Bearer mytoken",
    },
  },
  "options": Object {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization with auth should correctly initialize with \`api_key\` 1`] = `
GBFS {
  "auth": Object {
    "apiKey": Object {
      "key": "mykey",
      "value": "myvalue",
    },
    "type": "api_key",
  },
  "gotOptions": Object {
    "headers": Object {
      "mykey": "myvalue",
    },
  },
  "options": Object {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;
